Resolved the problem with overflow hidden for the box class. (ODAEU-257)

--- a/eudevfin/reports-ui/src/main/webapp/css/style.css
+++ b/eudevfin/reports-ui/src/main/webapp/css/style.css
@@ -162,7 +162,7 @@ div.box {
 	background-color: #fff;
 	border:0px;
 	height: auto;
-	overflow: hidden;
+	/*overflow: hidden;*/
 }
 
 .box {
